@@ -1,6 +1,3 @@
-FROM openjdk:8-jdk-slim
-ENV PORT 8080
-EXPOSE 8080
+FROM openjdk:8-jdk-alpine
 COPY build/libs/*.jar /opt/app.jar
-WORKDIR /opt
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
